1.8.6
---------
- Added dynamic detection of base binaries. Might need to do this for all binaries in the future.
  * Reason for this is that sometimes Funtoo and Gentoo store core files in different locations.

1.8.5
---------
- Fixed a bug that prevented the initramfs from copying the modules.
  This bug occured when you were in a live cd (somewhere other than live system),
  and you tried to create an initramfs. The modules weren't found because modprobe uses
  `uname -r` to detect the base directory for modules. Now modprobe is using -S <kernel>.

1.8.4
---------

Major Changes:
- Initramfs now uses bash instead of busybox's default shell (ash).
- Kernel loading mechanism has been switched from busybox's kernel stuff to kmod
- Added ability to use keyfile with luks (enc_type=pass, key, or key_gpg)
- Added nano, kmod, and gpg to the initramfs
- Modules can now be added automatically with full dependencies. This means that 
  you can say "I want to use nouveau, zfs, and another driver" and the creator will
  automagically get every module that that module needs in order for it to work.

Minor Changes:
- Reduced sleep time from 5 to 4 in refresh_cache function for files/resources/generic.sh
- Made the modules loading function smaller in files/resources/generic.sh
- Transitioning over to equal signs from Strict POSIX to normal bash "=" to "=="
- Transitioning over if functions to use -o or -a rather than:   ] && [   ] || [
- Bash colors are now added
- You can now decide whether or not you want to copy your zpool cache
- The initramfs will automatically make all the busybox nodes in /bin before packing.
- Now using bash style arrays for the luks devices function.
- Prints out the luks devices nicely at boot

1.8.3
---------
- Fixed a benign bug that printed out that the rpool didn't exist
- Switched from creating SRMs (System Rescue Modules) to SBs (SLAX Bundles).
  System Rescue CD is no longer used for this creator. SLAX will now be used.