@@ -120,6 +120,24 @@ enc_type - What type of method will are you using to decrypt?
 
 	example: linux <kernel> enc_root=/dev/sda3 enc_type=key
 
+enc_key_drive - What drive the keyfile in?
+	example: linux <kernel> enc_root=/dev/sda3 enc_type=key enc_key_drive=/dev/sdb1
+
+	In the above example, we use /dev/sdb1 because we will assume that every time we turn on the machine, 
+	the encryption key will be in /dev/sdb1. We also assume that if you have your key in a removable media,
+	each time you plug that media in, the kernel will detect that device as /dev/sdb1. Using UUIDs would be a better
+	solution, but that would require bringing udev or some type of mechanism for automatically getting UUIDs and all
+	that stuff.
+
+enc_key - What is the path to the keyfile? 
+	You basically pass to grub where in the drive the file is located 
+	(After the initramfs mounts the drive that you have the key in).
+
+	example: linux <kernel> enc_root=/dev/sda3 enc_type=key enc_key_drive=/dev/sdb1 enc_key=/keys/root.gpg
+
+	In this example, once the initramfs mounts /dev/sdb1, it will look for the /keys/root.gpg at /dev/sdb1.
+	So if the initramfs mounts /dev/sdb1 at /mnt/key, it will look for the key at /mnt/key/keys/root.gpg.
+
 LUKS passphrase/key:
 The easiest way to pass the passphrase is just to wait till the initramfs asks you for it.
 When this happens, it will use the _same_ passphrase  (or same key) for all your pools. This is to make it
